--- a/author_notebook.ipynb
+++ b/author_notebook.ipynb
@@ -5,7 +5,7 @@
    "id": "af9f541e",
    "metadata": {},
    "source": [
-    "# Bethany's Author Dashboard"
+    "# Author Analytics Notebook"
    ]
   },
   {
