Update author_db_pipeline Add some debugging support for working directory

--- a/author_db_pipeline.ipynb
+++ b/author_db_pipeline.ipynb
@@ -21,6 +21,12 @@
     "import warnings #allows us to suppress an annoying irrelevant pandas warning\n",
     "import re #also for the warning use case\n",
     "\n",
+    "# Print the current working directory for debugging\n",
+    "dir = os.getcwd()\n",
+    "print(dir)\n",
+    "# Debugging\n",
+    "# os.chdir('..')\n",
+    "\n",
     "# create a connection to the raw database\n",
     "# If the db doesn't already exist, it'll be created at this location\n",
     "con = duckdb.connect(\"dbs/raw_db.duckdb\")\n",
@@ -171,7 +177,7 @@
     "\n",
     "# return to the initial working directory\n",
     "os.chdir(initial_dir)\n",
-    "# print(os.getcwd())\n"
+    "print(os.getcwd())\n"
    ]
   }
  ],
