Update author_notebook Add debugging query (and cell IDs)

--- a/author_notebook.ipynb
+++ b/author_notebook.ipynb
@@ -82,7 +82,11 @@
     "\n",
     "sales = con.sql(\"select * from sales where report_date >= '2025-01-01' order by report_date\").df()\n",
     "\n",
-    "all_time_sales = con.sql(\"select * from sales order by report_date\").df()"
+    "all_time_sales = con.sql(\"select * from sales order by report_date\").df()\n",
+    "\n",
+    "#Debugging Queries\n",
+    "# query = con.sql(\"select * from main_private.stg__kenp_rates\")\n",
+    "# print(query)"
    ]
   },
   {
